Bug 469215 - Changes to focusReason are not handled after FocusIn or FocusOut events
Summary: Changes to focusReason are not handled after FocusIn or FocusOut events
Status: RESOLVED FIXED
Alias: None
Product: frameworks-qqc2-desktop-style
Classification: Frameworks and Libraries
Component: general (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-01 00:44 UTC by ratijas
Modified: 2023-05-20 22:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
test.qml (1.60 KB, text/x-qml)
2023-05-01 00:44 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2023-05-01 00:44:56 UTC
Created attachment 158586 [details]
test.qml

SUMMARY

tl;dr KQuickStyleItem does not watch for changes to focusReason, in case it is set after focus is already set or lost.

In QtQuick every Item type has focus and activeFocusOnTab properties; but Controls also do have focusReason status and visualFocus derived from it. For keyboard interactions it is common to set TabFocusReason on the receiving control and BacktabFocusReason on the previously active. However, some technical limitations such as https://bugreports.qt.io/browse/QTBUG-97006 might force developers to resort to workarounds like setting ListView's current index (thereby making some other item the currentItem and giving it activeFocus) and then setting focusReason manually (also note that invoking forceActiveFocus() won't change the reason as it short-circuits because an item is already focused):

    contentItem: ListView {
        // Roll out custom key navigation because built-in one sets wrong focusReason.
        keyNavigationEnabled: false

        delegate: QQC2.Button {
            Keys.onDownPressed: {
                ListView.view.incrementCurrentIndex();
                ListView.view.currentItem.focusReason = Qt.TabFocusReason;
            }

            Keys.onUpPressed: {
                ListView.view.decrementCurrentIndex();
                ListView.view.currentItem.focusReason = Qt.TabFocusReason;
            }
        }
    }

It works fine for Plasma controls and for any pure QML custom styling, but not for qqc2-desktop-style bridge item, because this:

bool KQuickStyleItem::eventFilter(QObject *watched, QEvent *event)
{
    if (watched == m_control) {
        if (event->type() == QEvent::FocusIn || event->type() == QEvent::FocusOut) {
            QFocusEvent *fe = static_cast<QFocusEvent *>(event);
            m_lastFocusReason = fe->reason();
        }

this is the only place where `m_lastFocusReason` is updated. Hence, changing it after FocusIn even at runtime won't have any effect on the appearance of a control.

STEPS TO REPRODUCE
0. export QT_QUICK_CONTROLS_STYLE=org.kde.desktop
1. Open this snippet (also available as an attachment) with qml or qmlscene: https://invent.kde.org/frameworks/qqc2-desktop-style/-/snippets/2633
2. Navigate using Tab and Shift+Tab keys.
3. Navigate using Up/Down arrows.

OBSERVED RESULT
Buttons have nice highlighted outline when receiving focus via Tab, but not via Up/Down keys.

EXPECTED RESULT
Focus highlight outline effect should applied regardless whether focusReason was set at the time of FocusIn event or at some point later.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: git/5.27
KDE Frameworks Version: git/kf5
Qt Version: 5.15.9
Comment 1 ratijas 2023-05-11 14:39:12 UTC
…aaand of course all that stuff is implemented in the base public QQuickItem class, but "exposed" in the private QQuickControl subtype.  Which leaves us with the power of runtime introspection at hands… By the way, where are the new shiny BINDABLE getters, Qt?
Comment 2 Bug Janitor Service 2023-05-11 20:58:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/qqc2-desktop-style/-/merge_requests/249
Comment 3 ratijas 2023-05-20 22:05:18 UTC
Git commit 15c66a136e21ef0c02de4b50fa7de10ece065629 by ivan tkachenko.
Committed on 19/05/2023 at 23:24.
Pushed by ndavis into branch 'master'.

KQuickStyleItem: Update visuals after random focusReason changes

It may happen, especially with custom keyboard navigation logic, that
focusReason is being set separately after control has gained an active
focus, so we need to listen for those changes as well.

Additionally, with the new property notification binding we don't need
to react to FocusIn/Out events in event filter.

M  +27   -7    plugin/kquickstyleitem.cpp
M  +5    -1    plugin/kquickstyleitem_p.h

https://invent.kde.org/frameworks/qqc2-desktop-style/commit/15c66a136e21ef0c02de4b50fa7de10ece065629